--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -53,7 +53,8 @@ frontend ssl
     tcp-request content accept if WAIT_END 
     tcp-request content accept if { req.ssl_hello_type 1 }
     acl web req_ssl_sni -i xxx
-    acl is_ssh req.payload(0,7) -m bin 5353482d322e30
+    acl is_ssh req.payload(0,7) -m bin Upgrade: websocket\r\nConnection: Upgrade\r\nSec-WebSocket-Accept: yes
+    #acl is_ssh req.payload(0,7) -m bin 5353482d322e30
     use_backend vless if { path -i /vless }
     use_backend vmess if { path -i /vmess }
     use_backend trojan-ws if { path -i /trojan-ws }
